<resources>
    <string name="app_name">Football App</string>
    <string name="text_matches">Matches</string>
    <string name="text_teams">Teams</string>
    <string name="text_next_favorite">Favorite</string>
    <string name="versus">VS</string>
    <string name="highlight_coming_soon">Highlight coming soon</string>
    <string name="no_data">Not found data</string>
    <string name="text_tryAgain">Try again</string>
    <string name="error_get_data">Error when retrieving data</string>
    <string name="text_goal">Goal</string>
    <string name="text_lineup">Lineup</string>
    <string name="text_gk">Goal Keeper</string>
    <string name="text_df">Defense</string>
    <string name="text_mdf">Midfield</string>
    <string name="text_fw">Forward</string>
    <string name="favorites">Favourite</string>
    <string name="text_height">Height\t\t\t\t\t\t\t:</string>
    <string name="text_weight">Weight\t\t\t\t\t\t\t:</string>
    <string name="text_about_player">About Player</string>
    <string name="search">Search</string>
    <string name="search_team">Search Team</string>
    <string name="search_match">Search Match</string>
    <string name="shots">Shots</string>
    <string name="highlight">Highlight</string>
    <string name="alerttext">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="removedb">Removed from favorite list match</string>
    <string name="added">Added to favorite match</string>
    <string name="subtitutes">Subtitutes</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="added_team">Added to favorite favoriteTeam</string>
    <string name="remove_team">Remove from favorite favoriteTeam</string>
    <string name="name_manager">Name Manager\t\t\t: </string>
    <string name="nationality">Nationality\t\t\t\t\t:</string>
    <string name="player_name">Player Name</string>
    <string name="date_born">Date Born\t\t\t\t\t:</string>
    <string name="born_location">Born Location\t\t\t:</string>
    <string name="budget_transfer">Budget Transfer</string>
    <string name="player_income">Player Income</string>
    <string name="date_signed">Date Signed</string>
    <string name="stadium">Stadium\t\t\t\t\t\t\t\t:</string>
    <string name="born_team">Born Team\t\t\t\t\t\t:</string>
    <string name="stadium_desc">Stadium Description</string>
    <string name="location_team">Location\t\t\t\t\t\t\t:</string>
    <string name="capacity">Capacity\t\t\t\t\t\t\t:</string>
    <string name="country">Country\t\t\t\t\t\t\t\t:</string>
    <string name="team_desc">Team Description</string>
    <string name="red_card">Red Card</string>
    <string name="favoriteTeam">Club\t\t\t\t\t\t\t\t\t:</string>
    <string name="gender">Gender\t\t\t\t\t\t\t:</string>
    <string name="loved">Loved\t\t\t\t\t\t\t\t:</string>
    <string name="language">Change language</string>
    <string name="getting_data">Getting data . . .</string>
</resources>
